--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         <header>
             <img src="./Images/logo/Booki.png" alt="logo de Booki" id="logo">
             <nav>
-                <a href="#">Hébergements</a>
-                <a href="#">Activités</a>
+                <a href="#hebergements">Hébergements</a>
+                <a href="#activites">Activités</a>
             </nav>
         </header>
         <main>
@@ -57,7 +57,7 @@
             <section>
                 <div class="hebergements-populaires">
                     <section class="hebergements">
-                        <h2>Hébergements à Marseille</h2>
+                        <h2 id="hebergements">Hébergements à Marseille</h2>
                         <div class="hebergements-cartes">
                             <a href="#" class="carte-cliquable">
                                 <article>
@@ -78,12 +78,232 @@
                                 </article>
                             </a>
                             <!-- Insérer le logement hôtel chez Amina avec photo febrian-zakaria.jpg-->
+                            <a href="#" class="carte-cliquable">
+                                <article>
+                                    <img src="./Images/hebergements/febrian-zakaria.jpg" alt="Photo d'un hébergement">
+                                    <div class="carte-contenu">
+                                        <div class="carte-texte">
+                                            <h3 class="carte-titre">Hôtel Chez Amina</h3>
+                                            <p class="carte-description">Nuit à partir de 96<span class="devise">€</span></p>
+                                        </div>
+                                        <div class="carte-note">
+                                            <i class="fa-solid fa-star" aria-hidden="true"></i>
+                                            <i class="fa-solid fa-star" aria-hidden="true"></i>
+                                            <i class="fa-solid fa-star" aria-hidden="true"></i>
+                                            <i class="fa-solid fa-star" aria-hidden="true"></i>
+                                            <i class="fa-solid fa-star neutral-star" aria-hidden="true"></i>
+                                        </div>
+                                    </div>
+                                </article>
+                            </a>
+                            <a href="#" class="carte-cliquable">
+                                <article>
+                                    <img src="./Images/hebergements/reisetopia.jpg" alt="Photo d'un hébergement">
+                                    <div class="carte-contenu">
+                                        <div class="carte-texte">
+                                            <h3 class="carte-titre">Hôtel Les mouettes</h3>
+                                            <p class="carte-description">Nuit à partir de 76<span class="devise">€</span></p>
+                                        </div>
+                                        <div class="carte-note">
+                                            <i class="fa-solid fa-star" aria-hidden="true"></i>
+                                            <i class="fa-solid fa-star" aria-hidden="true"></i>
+                                            <i class="fa-solid fa-star" aria-hidden="true"></i>
+                                            <i class="fa-solid fa-star" aria-hidden="true"></i>
+                                            <i class="fa-solid fa-star neutral-star" aria-hidden="true"></i>
+                                        </div>
+                                    </div>
+                                </article>
+                            </a>
+                            <a href="#" class="carte-cliquable">
+                                <article>
+                                    <img src="./Images/hebergements/annie-spratt.jpg" alt="Photo d'un hébergement">
+                                    <div class="carte-contenu">
+                                        <div class="carte-texte">
+                                            <h3 class="carte-titre">Hôtel de la mer</h3>
+                                            <p class="carte-description">Nuit à partir de 46<span class="devise">€</span></p>
+                                        </div>
+                                        <div class="carte-note">
+                                            <i class="fa-solid fa-star" aria-hidden="true"></i>
+                                            <i class="fa-solid fa-star" aria-hidden="true"></i>
+                                            <i class="fa-solid fa-star" aria-hidden="true"></i>
+                                            <i class="fa-solid fa-star" aria-hidden="true"></i>
+                                            <i class="fa-solid fa-star neutral-star" aria-hidden="true"></i>
+                                        </div>
+                                    </div>
+                                </article>
+                            </a>
+                            <a href="#" class="carte-cliquable">
+                                <article>
+                                    <img src="./Images/hebergements/marcus-loke.jpg" alt="Photo d'un hébergement">
+                                    <div class="carte-contenu">
+                                        <div class="carte-texte">
+                                            <h3 class="carte-titre">Auberge La Canebière</h3>
+                                            <p class="carte-description">Nuit à partir de 25<span class="devise">€</span></p>
+                                        </div>
+                                        <div class="carte-note">
+                                            <i class="fa-solid fa-star" aria-hidden="true"></i>
+                                            <i class="fa-solid fa-star" aria-hidden="true"></i>
+                                            <i class="fa-solid fa-star" aria-hidden="true"></i>
+                                            <i class="fa-solid fa-star" aria-hidden="true"></i>
+                                            <i class="fa-solid fa-star neutral-star" aria-hidden="true"></i>
+                                        </div>
+                                    </div>
+                                </article>
+                            </a>
+                            <a href="#" class="carte-cliquable">
+                                <article>
+                                    <img src="./Images/hebergements/nicate-lee.jpg" alt="Photo d'un hébergement">
+                                    <div class="carte-contenu">
+                                        <div class="carte-texte">
+                                            <h3 class="carte-titre">Auberge Le Panier</h3>
+                                            <p class="carte-description">Nuit à partir de 23<span class="devise">€</span></p>
+                                        </div>
+                                        <div class="carte-note">
+                                            <i class="fa-solid fa-star" aria-hidden="true"></i>
+                                            <i class="fa-solid fa-star" aria-hidden="true"></i>
+                                            <i class="fa-solid fa-star" aria-hidden="true"></i>
+                                            <i class="fa-solid fa-star" aria-hidden="true"></i>
+                                            <i class="fa-solid fa-star neutral-star" aria-hidden="true"></i>
+                                        </div>
+                                    </div>
+                                </article>
+                            </a>
+                        </div>
+                        <h3 id="read-more">Afficher plus</h3>
+                    </section> <!-- Fin de section hébergements -->
+                    <section class="populaires">
+                        <div class="populaires-title">
+                            <h2 class="section-title">Les plus populaires</h2>
+                            <i class="fa-solid fa-chart-line" aria-hidden="true"></i>
+                        </div>
+                        <div class="populaires-cards">
+                            <a href="#">
+                                <article class="card">
+                                    <img src="./images/hebergements/emile-guillemot.jpg" alt="Image de la chambre d'hôtel montrant un lit">
+                                    <div class="card-content">
+                                        <div class="card-txt">
+                                            <h3 class="card-title">Hôtel Le soleil du matin</h3>
+                                            <p class="card-subtitle">Nuit à partir de 128<span class="euro">€</span></p>
+                                        </div>
+                                        <div class="card-rating">
+                                            <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                            <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                            <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                            <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                            <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"></i>
+                                            <span class="sr-only">Note de 4 sur 5</span>
+                                        </div>
+                                    </div>
+                                </article>
+                            </a>
+                            <a href="#">
+                                <article class="card">
+                                    <img src="./images/hebergements/aw-creative.jpg" alt="Image de la chambre d'hôtel montrant un lit">
+                                    <div class="card-content">
+                                        <div class="card-txt">
+                                            <h3 class="card-title">Chambres d’hôtes Au cœur de l’eau</h3>
+                                            <p class="card-subtitle">Nuit à partir de 71<span class="euro">€</span></p>
+                                        </div>
+                                        <div class="card-rating">
+                                            <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                            <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                            <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                            <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                            <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"></i>
+                                            <span class="sr-only">Note de 4 sur 5</span>
+                                        </div>
+                                    </div>
+                                </article>
+                            </a>
+                            <a href="#">
+                                <article class="card">
+                                    <img src="./images/hebergements/febrian-zakaria2.jpg" alt="Image de la chambre d'hôtel montrant un lit">
+                                    <div class="card-content">
+                                        <div class="card-txt">
+                                            <h3 class="card-title">Hôtel Bleu et Blanc</h3>
+                                            <p class="card-subtitle">Nuit à partir de 68<span class="euro">€</span></p>
+                                        </div>
+                                        <div class="card-rating">
+                                            <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                            <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                            <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                            <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                            <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"></i>
+                                            <span class="sr-only">Note de 4 sur 5</span>
+                                        </div>
+                                    </div>
+                                </article>
+                            </a>
                         </div>
                     </section>
+                    <!-- Fin de section les plus populaires -->
                 </div>
             </section>
+            <!-- Fin de section hébergements et populaires -->
+             <!-- Section activités -->
+             <section id="section-activites">
+                <h2 id="activites">Activités à Marseille</h2>
+                <div class="activities-list">
+                    <div class="activities-card">
+                        <a href="#">
+                            <article>
+                                <img src="./images/activites/reno-laithienne.jpg" alt="Photo du vieux port de Marseille">
+                                <h3>Vieux-Port</h3>
+                            </article>
+                        </a>
+                    </div>
+                    <div class="activities-card">
+                        <a href="#">
+                            <article>
+                                <img src="./Images/activites/paul-hermann.jpg" alt="Photo du Fort de Pomègues">
+                                <h3>Fort de Pomègues</h3>
+                            </article>
+                        </a>
+                    </div>
+                    <div class="activities-card">
+                        <a href="#">
+                            <article>
+                                <img src="./images/activites/kilyan-sockalingum.jpg" alt="Photo du Parc national des Calanques">
+                                <h3>Parc National des Calanques</h3>
+                            </article>
+                        </a>
+                    </div>
+                    <div class="activities-card">
+                        <a href="#">
+                            <article>
+                                <img src="./images/activites/florian-wehde.jpg" alt="Photo de Notre Dame de la Garde">
+                                <h3>Notre Dame de la Garde</h3>
+                            </article>
+                        </a>
+                    </div>
+                </div>
+            </section>
+             <!-- Fin de section activités -->
         </main>
-    <footer></footer>
+    <footer class="footer-page">
+        <div class="footer-row">
+            <h4>À propos</h4>
+            <ul>
+                <li><a href="#">Fonctionnement du site</a></li>
+                <li><a href="#">Conditions générales</a></li>
+                <li><a href="#">Données et confidentialité</a></li>
+            </ul>
+        </div>
+        <div class="footer-row">
+            <h4>Nos hébergements</h4>
+            <ul>
+                <li><a href="#">Charte qualité</a></li>
+                <li><a href="#">Proposer votre hôtel</a></li>
+            </ul>
+        </div>
+        <div class="footer-row">
+            <h4>Assistance</h4>
+            <ul>
+                <li><a href="#">Centre d'aide</a></li>
+                <li><a href="#">Nous contacter</a></li>
+            </ul>
+        </div>
+    </footer>
     </div>
 </body>
 
