--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
     <div class="main-container">
-        <header>
+        <header class="header-page">
             <img src="./Images/logo/Booki.png" alt="logo de Booki" id="logo">
             <nav>
                 <a href="#hebergements">Hébergements</a>
