--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
         </main>
     <footer class="footer-page">
         <div class="footer-row">
-            <h4>À propos</h4>
+            <h4 class="row-title">À propos</h4>
             <ul>
                 <li><a href="#">Fonctionnement du site</a></li>
                 <li><a href="#">Conditions générales</a></li>
@@ -299,14 +299,14 @@
             </ul>
         </div>
         <div class="footer-row">
-            <h4>Nos hébergements</h4>
+            <h4 class="row-title">Nos hébergements</h4>
             <ul>
                 <li><a href="#">Charte qualité</a></li>
                 <li><a href="#">Proposer votre hôtel</a></li>
             </ul>
         </div>
         <div class="footer-row">
-            <h4>Assistance</h4>
+            <h4 class="row-title">Assistance</h4>
             <ul>
                 <li><a href="#">Centre d'aide</a></li>
                 <li><a href="#">Nous contacter</a></li>
